# trading-engine

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  feed_orders.py  metrics_consumer.py
src/: BinanceRestAdapter.cpp  BinanceRestAdapter.h  BinanceWebSocketAdapter.cpp  BinanceWebSocketAdapter.h  CMakeLists.txt  MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  Quote.h  QuoteProviderAdapter.h  Trade.h  benchmark.cpp  http_server.cpp  http_server.h  main.cpp
tests/: CMakeLists.txt  test_matching_engine.cpp  test_order.cpp  test_order_book.cpp
web/: index.html  main.js
